--- a/html/index.html
+++ b/html/index.html
@@ -3,48 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Linux Tablet NUI</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <title>Virtual Desktop</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
 </head>
-<body>
-    <div class="container">
-        <header>
-            <h1>Linux Tablet</h1>
-            <div id="status-bar">
-                <span id="time">12:00</span>
-                <span id="battery">🔋 100%</span>
-                <button id="close-button" onclick="closeApp()">X</button>
-            </div>
-        </header>
-        <main>
-            <div id="desktop">
-                <div id="app-list">
-                    <h2>Applications</h2>
-                    <ul>
-                        <li onclick="openApp('terminal')"><i class="fas fa-terminal"></i> Terminal</li>
-                        <li onclick="openApp('file-manager')"><i class="fas fa-folder"></i> File Manager</li>
-                        <li onclick="openApp('settings')"><i class="fas fa-cog"></i> Settings</li>
-                    </ul>
-                </div>
-            </div>
-            <div id="app-content" style="display: none;">
-                <h2 id="app-title"></h2>
-                <div id="app-body"></div>
-                <button onclick="closeApp()">Close</button>
-            </div>
-        </main>
+<body style="display: none;"> <!-- Body is hidden by default -->
+    <header>
+        <h1>Virtual Desktop</h1>
+        <div id="status-bar">
+            <span id="time">12:00</span>
+            <span id="battery">🔋 100%</span>
+        </div>
+    </header>
+    
+    <div id="desktop">
+        <div class="app-icon" id="hacking-icon" onclick="openApp()">
+            <img src="images/hack_icon.png" alt="Hacking Interface">
+            <span>Hacking Interface</span>
+        </div>
+        <div class="app-icon" id="browser-icon" onclick="openBrowser()">
+            <img src="images/browser_icon.png" alt="Web Browser">
+            <span>Web Browser</span>
+        </div>
+        <div class="app-icon" id="file-icon" onclick="openFiles()">
+            <img src="images/files_icon.png" alt="File Explorer">
+            <span>File Explorer</span>
+        </div>
     </div>
-    <script src="script.js"></script>
-    <script>
-        // Listen for messages from Lua
-        window.addEventListener('message', function(event) {
-            if (event.data.action === 'openTablet') {
-                document.body.style.display = 'flex';  // Show the tablet
-            } else if (event.data.action === 'closeTablet') {
-                document.body.style.display = 'none';  // Hide the tablet
-            }
-        });
-    </script>
+
+    <div id="hacking-interface" class="app-window">
+        <h2>Hacking Interface</h2>
+        <input type="text" id="hack-input" placeholder="Enter command...">
+        <button onclick="executeHack()">Execute</button>
+        <button onclick="closeApp()">Close</button>
+        <div id="hack-output"></div>
+    </div>
+
+    <div id=" browser-interface" class="app-window">
+        <h2>Web Browser</h2>
+        <p>This is a simulated web browser window.</p>
+        <button onclick="closeBrowser()">Close</button>
+    </div>
+
+    <div id="file-explorer" class="app-window">
+        <h2>File Explorer</h2>
+        <p>This is a simulated file explorer window.</p>
+        <button onclick="closeFiles()">Close</button>
+    </div>
+
+    <script src="script.js"></script> <!-- Link to your JavaScript file -->
 </body>
 </html>
